* Minor update: (230112)
- Update ref to myqnap.org

* Minor update: (220809)
- Include service script operation status logging.

* Minor update: (220426)
- Use better keynames for scripts and sysv paths.

* Minor update: (220425)
- Add Scripts and SysV paths to qpkg.conf for easier access.

* Minor update: (210809)
- Ensure SortMyQPKGs version check works correctly with alpha characters after the datecode.
- Remove max QTS version.

* Minor update: (210328)
- Open runtime log in a new QTS window instead of a new page.

* Minor update: (201225)
- use '--clean' instead of '--cancel' with App Center notifier (thanks @pedropombeiro for finding this!)

* Minor update: (201223)
- ensure service script always exits with zero (thank you @pedropombeiro for identifying this!)

* Minor update: (201220)
- don't run 'stop' operations when upgrading package (fixed).
- use better rendering for base package icon.

* Minor update: (201215)
- don't run 'stop' operations when upgrading package.
- ensure QTS 4.5.1 correctly enables package icon in App Center.

* Minor update: (201119)
- ensure symlink to /dev/fd is created so stderr can be captured separately from stdout.

* Minor update: (201106)
- a few wording and formatting changes for accuracy, and to keep ShellCheck happy.
- include a link to logfile in [/var/log/]

* Minor update: (201104)
- downgrade logged warning when sorting QPKG order,
- include 'start' and 'stop' operations in logs.

* Minor update: (201101)
- improve log format.

* Minor update: (201029)
- add support for SysV-style init scripts. Thank you @mickroll for this great suggestion!

* Minor update: (190106)
- tidy-up a few logged and interactive display messages.

* Initial release: (190101)
- first public script release.